--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,8 @@
 *.zip
 *.tar.gz
 *.rar
-*.idea/
+.idea
+*.idea/*.xml
 *.iml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
