--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -38,4 +38,46 @@
         <param-name>primefaces.FONT_AWESOME</param-name>
         <param-value>true</param-value>
     </context-param>
+
+
+
+    <!-- TO LOGIN -->
+    <login-config>
+        <auth-method>FORM</auth-method>
+        <form-login-config>
+            <form-login-page>/view/login.xhtml</form-login-page>
+            <form-error-page>/view/errors/login-error.xhtml</form-error-page>
+        </form-login-config>
+    </login-config>
+
+    <security-role>
+        <role-name>ADM</role-name>
+    </security-role>
+    <security-role>
+        <role-name>USER</role-name>
+    </security-role>
+
+    <security-constraint>
+        <display-name>Segurança para o diretório de admin</display-name>
+        <web-resource-collection>
+            <web-resource-name>Somente Administração</web-resource-name>
+            <url-pattern>/view/admin/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>ADM</role-name>
+        </auth-constraint>
+    </security-constraint>
+
+    <security-constraint>
+        <display-name>Segurança para diretórios</display-name>
+        <web-resource-collection>
+            <web-resource-name>Todos os usuários autenticados</web-resource-name>
+            <url-pattern>/view/bairros/*</url-pattern>
+            <url-pattern>/view/ocorrencias/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>ADM</role-name>
+            <role-name>USER</role-name>
+        </auth-constraint>
+    </security-constraint>
 </web-app>
