--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,7 +33,7 @@
     <login-config>
         <auth-method>FORM</auth-method>
         <form-login-config>
-            <form-login-page>/view/login.xhtml</form-login-page>
+            <form-login-page>/view/sessions/login.xhtml</form-login-page>
             <form-error-page>/view/errors/login-error.xhtml</form-error-page>
         </form-login-config>
     </login-config>
