--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.0.8</version>
+            <version>5.1.40</version>
+            <type>jar</type>
         </dependency>
 
         <!-- LOG -->
